# vsinstall

./: .gitignore  README.md  pyproject.toml
vsinstall/: main.py
